Minor changes. Attempt to fix scaling issue in landscape on mobile.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,4 @@
 @media screen and (min-width: 480px) {
-/*
-	#nav-header-container {
-		max-width: 100%;
-	}
-*/
 	h2 {
 		font-size: 2.5em;
 		margin-top: 0;
